--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	    <tr>
 			<td>
 				<table border="2" style="width: 100%; height: 100%">
-					<th colspan="2">Nested Table 2</th>
+					<tr><th colspan="2">Nested Table 2</th></tr>
 					<tr>
 						<th>Column 1</th>
 						<th>Column 2</th>
@@ -24,7 +24,9 @@
 			</td>
 			<td>
 				<table border="2" style="width: 100%; height: 100%">
-					<th>Nested Table 2</th>
+					<tr>
+						<th>Nested Table 1</th>
+					</tr>
 					<tr>
 						<td>
 							<ul>
@@ -40,7 +42,7 @@
 		<tr>
 			<td>
 				<table border="2" style="width: 100%; height: 100%">
-					<th colspan="2">Nested Table 3</th>
+					<tr><th colspan="2">Nested Table 3</th></tr>
 					<tr>
 						<td align="center">
 							<a href="#">Nested Table</a>
@@ -53,7 +55,7 @@
 			</td>
 			<td>
 				<table border="2" style="width: 100%; height: 100%">
-					<th>Nested Table 4</th>
+					<tr><th>Nested Table 4</th></tr>
 					<tr>
 						<td align="center" style="background-color : black; color : white">
 							HTML
